<resources>
    <string name="app_name">EmaZing Race ITB</string>
    <string name="input_message">username.</string>
    <string name="host_game">HOST A GAME</string>
    <string name="join_game">JOIN A GAME</string>

    <string name="msg_subscribed">Subscribed to news topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_hosting_game">HostingGame</string>
    <string name="title_activity_test_aja">test_aja</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_tryhard">tryhard</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_login">LOGIN</string>
    <string name="button_register">REGISTER</string>
    <string name="register_here">Create new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="application">EmaZing Race</string>
    <string name="shake">Test Shake</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="congrats">CONGRATULATION</string>
    <string name="youwin">YOU WIN</string>
    <string name="boo">BOO</string>
    <string name="youlose">YOU LOSE</string>
</resources>
